--- a/style.css
+++ b/style.css
@@ -10,44 +10,11 @@ main{
     width: 100%;
     height: 100%;
 
-    background-image: url('images/main/bg1.jpg');
+    /* background-image: url('images/main/bg1.jpg'); */
 	background-attachment: fixed;
 	background-size: cover;
 	background-repeat: none;
     background-position: center;
-}
-
-#topPage{
-    width: 100%;
-    height: 100%;
-}
-
-#initLogo{
-    width: 100%;
-    height: 100%;
-    background-color: black;
-
-    top: 0px;
-    left: 0px;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#initLogo img{
-    width: 50%;
-}
-
-#initTitle{
-    color: white;
-    margin-bottom: 0;
-    padding-left: 50px;
-    padding-top: 100px;
-}
-
-#initTitle h1, #initTitle h3{
-    margin: 0;
 }
 
 #pinContainer {
@@ -69,4 +36,7 @@ main{
     float: left;
 
     overflow: scroll;
+
+    border-color: black;
+    border: solid;
 }
