--- a/css/topPage.css
+++ b/css/topPage.css
@@ -1,9 +1,11 @@
 #topPage{
     width: 100%;
     height: 100%;
+
+    position: relative;
 }
 
-#initLogo{
+#initLogoContainer{
     width: 100%;
     height: 100%;
     background-color: black;
@@ -16,40 +18,27 @@
     align-items: center;
 }
 
-#initLogo img{
+#initLogoContainer img{
     width: 50%;
 }
 
 #initTitle{
+    position: absolute;
     color: white;
     margin-bottom: 0;
-    padding-left: 50px;
-    padding-top: 100px;
+    /* padding-left: 50px;
+    padding-top: 100px; */
+
+    left: 100px;
+    bottom: 30px;
 }
 
 #initTitle h1, #initTitle h3{
     margin: 0;
 }
 
-.scrollerTop{
+.twitterWidget {
     position: absolute;
-
-    left: 50%;
-    top: 3%;
-    /* think this will be get rid of after implementing scroll related features */
-}
-
-.scrollerBottom{
-    position: absolute;
-
-    left: 50%;
-    top: 90%;
-}
-
-.scrollerTop a i, .scrollerBottom a i{
-    font-size: 3em;
-    padding-bottom: 0.5em;
-    color: white;
-
-    cursor: pointer;
+    right: 30px;
+    top: 10px;
 }
