--- a/style.css
+++ b/style.css
@@ -15,3 +15,8 @@ main{
 	background-repeat: none;
     background-position: center;
 }
+
+#container section{
+    width: 100%;
+    height: 100%;
+}
