--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@ main{
     width: 100%;
     height: 100%;
 
-	background-attachment: fixed;
+    background-attachment: fixed;
 	background-size: cover;
 	background-repeat: none;
-    background-position: center;
+	background-position: center center;
 }
 
 #container section{
