--- a/css/stagesPage.css
+++ b/css/stagesPage.css
@@ -46,17 +46,6 @@
     overflow: scroll;
 }
 
-#stagesContainer #stagesShowContainer #stagesShowMainContainer{
-    background-color: white;
-    flex-grow: 9;
-
-    width: 80%;
-    height: 100%;
-
-    z-index: 100;
-    overflow: hidden;
-}
-
 #stagesShowTabContainer input + label{
     width: 100%;
     height: 3em;
@@ -73,4 +62,118 @@
 
 #stagesShowTabContainer input:checked + label{
     background-color: white;
+}
+
+#stagesContainer #stagesShowContainer #stagesShowMainContainer{
+    /* background-color: white; */
+    flex-grow: 9;
+
+    left: 20%;
+    width: 80%;
+    height: 100%;
+    margin: 0;
+
+    z-index: 100;
+    overflow: hidden;
+    position: absolute;
+}
+
+#stagesShowMainContainer .flexslider{
+    background-color: gray;
+    margin: 0;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    border: none;
+}
+
+#stagesShowMainContainer .flexslider .slides{
+    height: 100%;
+}
+
+#stagesShowMainContainer .flexslider .flex-viewport{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+#stagesShowMainContainer .stagesThumbnailContainer{
+    box-sizing: border-box;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: flex-start;
+}
+
+#stagesShowMainContainer .stagesThumbnailContainer .stageThumbnail{
+    width: 150px;
+    height: 150px;
+    border-radius: 50px;
+    margin: 10px;
+    box-sizing: border-box;
+    cursor: pointer;
+
+    background-color: white;
+    text-align: center;
+    Vertical-align: bottom;
+}
+
+li#stagesSlides2{
+    width: 100%;
+    height: 100%;
+}
+
+#stagesShowMainTopBar{
+    position: relative;
+    width: 100%;
+    height: 2em;
+    text-align: center;
+    vertical-align: bottom;
+
+    background-color: rgb(207, 207, 207);
+    box-sizing: border-box;
+}
+
+#stagesShowMainTopBar #stagesShowReturnButton i{
+    position: relative;
+    width: 2em;
+}
+
+#stagesShowMainTopBar i{
+    position: absolute;
+    left: 10px;
+    font-size: 2em;
+    cursor: pointer;
+}
+
+/* stages post style */
+#stagesShowMainContent{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+#stagesShowMainContent .stagePostContainer{
+    position: absolute;
+    padding: 3%;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+}
+
+.stagePostContainer iframe{
+    position: relative;
+    width: 70%;
+    max-width: 450px;
+    height: 50%;
+    max-height: 250px;
+}
+
+.stagePostContainer .descContainer {
+    background-color: white;
+    height: 40%;
 }
