--- a/css/stagesPage.css
+++ b/css/stagesPage.css
@@ -79,7 +79,7 @@
 }
 
 #stagesShowMainContainer .flexslider{
-    background-color: gray;
+    background-color: rgba(255, 255, 255, 0.3);
     margin: 0;
     position: relative;
     width: 100%;
@@ -103,24 +103,54 @@
 
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
     align-items: flex-start;
+    padding: 40px 10px;
+}
+
+.stagesTopBar{
+    position: absolute;
+    width: 100%;
+    background-color: white;
+}
+
+.stagesTopBar i{
+    cursor: pointer;
+    font-size: 2em;
 }
 
 #stagesShowMainContainer .stagesThumbnailContainer .stageThumbnail{
     width: 150px;
     height: 150px;
-    border-radius: 50px;
-    margin: 10px;
+    border-radius: 40px;
+    margin: 15px;
     box-sizing: border-box;
     cursor: pointer;
+    color: white;
 
     background-color: white;
     text-align: center;
     Vertical-align: bottom;
+    overflow: hidden;
 }
 
-li#stagesSlides2{
+.stageThumbnail .stageThumbnailImg{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 50px;
+}
+
+.stageThumbnail .stageThumbnailTitle{
+    position: absolute;
+    top: 100px;
+    text-align: center;
+    width: 100%;
+    height: 50px;
+    background-color: rgba(0, 0, 0, 0.5);
+    vertical-align: top;
+}
+
+li#stagesSlides3{
     width: 100%;
     height: 100%;
 }
@@ -132,7 +162,7 @@ li#stagesSlides2{
     text-align: center;
     vertical-align: bottom;
 
-    background-color: rgb(207, 207, 207);
+    background-color: white;
     box-sizing: border-box;
 }
 
@@ -165,15 +195,39 @@ li#stagesSlides2{
     box-sizing: border-box;
 }
 
-.stagePostContainer iframe{
+.stagePostContainer .stagePostMediaContainer{
     position: relative;
-    width: 70%;
-    max-width: 450px;
+    width: 100%;
     height: 50%;
+    display: flex;
+}
+
+.stagePostContainer .stagePostMediaContainer iframe{
+    position: relative;
+    width: 60%;
+    max-width: 450px;
+    height: 100%;
     max-height: 250px;
 }
 
+.stagePostMediaContainer .stagePostImgContainer {
+    position: relative;
+    width: 40%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.stagePostMediaContainer .stagePostImgContainer img{
+    position: relative;
+    height: 50%;
+    object-fit: contain;
+    margin: 1%;
+    box-sizing: border-box;
+}
+
 .stagePostContainer .descContainer {
-    background-color: white;
-    height: 40%;
+    background-color: rgba(255, 255, 255, 0.3);
+    height: 35%;
 }
