--- a/css/aboutUsPage.css
+++ b/css/aboutUsPage.css
@@ -6,6 +6,7 @@
     position: relative;
 }
 
+/* for flexslider with images */
 #aboutUsImg {
     position: absolute;
     left: 10%;
@@ -23,15 +24,22 @@
 
 #aboutUsImg img{
     position: absolute;
-    width: 60%;
+
+    border: white solid 5px;
+    box-shadow: 0px 10px 10px rgba(0,0,0,0.4);
 }
 
-#aboutUsImg img.img1{ left: -100%; top: 200px; opacity: 0 }
-#aboutUsImg img.img2{ left: 40%; top: -300px; opacity: 0; }
-#aboutUsImg img.img3{ left: -100%; top: 200px; }
-#aboutUsImg img.img4{ left: 40%; top: -300px; }
-#aboutUsImg img.img5{ left: -100%; top: 200px; }
-#aboutUsImg img.img6{ left: 40%; top: -300px; }
+#aboutUsImg11{ left: -100%; top:   20px; width: 60%; opacity: 0}
+#aboutUsImg12{ left:  100%; top:   70px; width: 50%; opacity: 0}
+#aboutUsImg13{ left:   10%; top:  800px; width: 80%; opacity: 0}
+
+#aboutUsImg21{ left:   -5%; top: -200px; width: 25%; opacity: 0}
+#aboutUsImg22{ left:   40%; top:  800px; width: 50%; opacity: 0}
+#aboutUsImg23{ left:  100%; top:    0px; width: 80%; opacity: 0}
+#aboutUsImg24{ left: -100%; top:  190px; width: 50%; opacity: 0}
+
+#aboutUsImg5{ left: -100%; top: 200px; }
+#aboutUsImg6{ left: 40%; top: -300px; }
 
 #aboutUsDesc {
     position: relative;
