--- a/css/sidebarPage.css
+++ b/css/sidebarPage.css
@@ -1,14 +1,35 @@
 #sidebarContainer{
-    float: left;
-    position: absolute;
+    position: fixed;
     display: flex;
 
-    top: 100px;
+    top: 150px;
     left: 0px;
 }
 
 #sidebarContainer #sidebar{
-    width: 50px;
-    height: 300px;
-    background-color: blue;
+    position: absolute;
+    width: 65px;
+    /* background-color: white; */
+    /* overflow: hidden; */
+    border-radius: 5px;
+}
+
+#sidebarContainer .sidebarElem{
+    position: relative;
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 65px;
+    height: 2em;
+    left: -5px;
+    padding: 0.5em 1em;
+
+    line-height: 2em;
+    border-radius: 5px;
+
+    text-align: left;
+    font-size: 0.7em;
+    cursor: pointer;
+}
+
+#sidebarContainer .sidebarElem:hover{
+    background-color: rgba(255, 255, 255, 1);
 }
