--- a/css/contactPage.css
+++ b/css/contactPage.css
@@ -9,12 +9,14 @@
     background-color: white;
     box-shadow: 10px 10px 10px 10px rgba(0,0,0,0.4);
 
-    left: 5%;
+    left: 130px;
     top: 5%;
-    width: 50%;
+    width: 60%;
     height: 90%;
     box-sizing: border-box;
     z-index: 100;
+
+    border-radius: 5px;
 }
 
 #contactTitle{
@@ -43,6 +45,8 @@
     position: relative;
     height: 90%;
     padding:0.25em 1em;
+
+    font-size: 0.7em;
 }
 #contactMain form:before, #contactMain form:after{
     content:'';
@@ -79,24 +83,12 @@
 #contactMain form table tr td input, #contactMain form table tr td textarea{
     width: 100%;
     resize: none;
+    border: 1px solid gray;
 }
 
-#contactContainer #contactImg{
+#contactContainer>img{
     position: absolute;
-    top: 30%;
+    display: block;
     left: 30%;
-    width: 30%;
-    height: 213px;
-    padding: 10px;
-    background-color: white;
-}
-
-#contactContainer #contactImg:first-child{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-attachment: fixed;
-	background-size: cover;
-	background-repeat: none;
-    background-position: center center;
+    top: 300px;
 }
