--- a/css/stagesPage.css
+++ b/css/stagesPage.css
@@ -3,11 +3,11 @@
     height: 100%;
     position: relative;
 
-    background: rgb(185,210,229); /* Old browsers */
-    background: -moz-linear-gradient(top, rgba(185,210,229,1) 0%, rgba(104,165,214,1) 60%, rgba(68,141,201,1) 85%, rgba(56,101,153,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, rgba(185,210,229,1) 0%,rgba(104,165,214,1) 60%,rgba(68,141,201,1) 85%,rgba(56,101,153,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, rgba(185,210,229,1) 0%,rgba(104,165,214,1) 60%,rgba(68,141,201,1) 85%,rgba(56,101,153,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b9d2e5', endColorstr='#386599',GradientType=0 ); /* IE6-9 */
+    background: #f8ffe8; /* Old browsers */
+background: -moz-linear-gradient(top, #f8ffe8 0%, #c8f7ad 46%, #6be031 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, #f8ffe8 0%,#c8f7ad 46%,#6be031 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, #f8ffe8 0%,#c8f7ad 46%,#6be031 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8ffe8', endColorstr='#6be031',GradientType=0 ); /* IE6-9 */
 }
 
 #stagesContainer canvas{
@@ -238,4 +238,12 @@ li#stagesSlides3{
 .stagePostContainer .descContainer {
     background-color: rgba(255, 255, 255, 0.3);
     height: 35%;
+}
+
+#stagesBg {
+    position: absolute;
+    height: 500px;
+    width: 500px;
+    left: -10px;
+    bottom: -10px;
 }
