--- a/css/newComersPage.css
+++ b/css/newComersPage.css
@@ -48,3 +48,23 @@
 
     background-color: rgba(255,255,255,0.5);
 }
+
+#sakura1{
+    position: absolute;
+    width: 100px;
+    bottom: 10px;
+    left: 20px;
+    transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+}
+
+#sakura2{
+    position: absolute;
+    width: 150px;
+    bottom: 50px;
+    right: 30px;
+    transform: rotate(30deg);
+    -moz-transform: rotate(30deg);
+    -webkit-transform: rotate(30deg);
+}
