--- a/css/aboutUsPage.css
+++ b/css/aboutUsPage.css
@@ -1,5 +1,6 @@
 #aboutUsContainer {
-    background-color: rgb(250, 244, 225);
+    /* background-color: rgb(250, 244, 225); */
+    background-color: rgba(0, 0, 0, 0.4);
     width: 100%;
     height: 100%;
 
@@ -55,11 +56,13 @@
     box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.4);
     z-index: 100;
 
+    background-color: rgba(255, 255, 255, 0.7);
 }
 
 #aboutUsDesc .flexslider{
     height: 83%;
-    background-color: rgba(255, 255, 255, 0.6);
+    /* background-color: rgba(255, 255, 255, 0.6); */
+    background-color: rgba(255, 255, 255, 0.7);
     border: none;
     padding: 10px;
 }
