--- a/css/sidebar2Page.css
+++ b/css/sidebar2Page.css
@@ -69,3 +69,22 @@
     box-sizing: border-box;
     border-bottom: 10px solid black;
 }
+
+#sidebar2Contacts {
+    position: absolute;
+    background: transparent;
+    display: flex;
+    height: 50px;
+    width: 100%;
+
+    bottom: 0px;
+    justify-content: space-around;
+}
+
+.sidebar2ContactEl a:link, .sidebar2ContactEl a:visited {
+    position: relative;
+    height: 40px;
+    border-radius: 20px;
+    box-sizing: border-box;
+    color: white;
+}
