--- a/css/topPage.css
+++ b/css/topPage.css
@@ -22,11 +22,12 @@
     width: 50%;
 }
 
-#initTitle{
+#topLogo{
     position: absolute;
-    margin-bottom: 0;
+    margin: 5px;
+    width: 300px;
 
-    left: 50px;
+    left: 30px;
     bottom: 30px;
 }
 
