fixed stages page design

--- a/css/stagesPage.css
+++ b/css/stagesPage.css
@@ -111,14 +111,29 @@
 
 .stagesTopBar{
     position: absolute;
-    width: 100%;
+    width: 16.7%;
     background-color: rgba(82, 82, 82, 0.9);
     color: white;
+    height: 50px;
 }
 
-.stagesTopBar i{
+.stagesSlides2Arrow {
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin: 10px;
+}
+
+#stagesSlides2YearTitle, #stagesSlides3StageTitle{
+    position: absolute;
+    left: 40%;
+    top: 12px;
+    margin: auto;
+}
+
+.stagesTopBar svg, #stagesShowMainTopBar svg{
     cursor: pointer;
-    font-size: 2em;
+    font-size: 30px;
 }
 
 #stagesShowMainContainer .stagesThumbnailContainer .stageThumbnail{
@@ -161,7 +176,7 @@ li#stagesSlides3{
 #stagesShowMainTopBar{
     position: relative;
     width: 100%;
-    height: 2em;
+    height: 50px;
     text-align: center;
     vertical-align: bottom;
 
@@ -232,7 +247,7 @@ li#stagesSlides3{
 }
 
 .stagePostContainer .descContainer {
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.5);
     height: 35%;
 }
 
