--- a/css/sidebar2Page.css
+++ b/css/sidebar2Page.css
@@ -20,7 +20,8 @@
     top: 50%;
     padding: 10px;
 
-    background-color: rgba(121, 121, 121, 0.8);
+    background: rgb(41, 47, 52);
+    opacity: 0.9;
     color: white;
     font-size: 27px;
     border-radius: 15px;
@@ -36,7 +37,6 @@
     height: 100%;
     left: 50px;
 
-    background-color: rgba(121, 121, 121, 0.5);
     background: rgb(41, 47, 52);
 
     box-sizing: border-box;
