--- a/css/sidebar2Page.css
+++ b/css/sidebar2Page.css
@@ -17,7 +17,7 @@
     width: 40px;
     height: 100px;
     left: 0px;
-    top: 50%;
+    top: 20%;
     padding: 10px;
 
     background: rgb(41, 47, 52);
@@ -27,8 +27,9 @@
     border-radius: 15px;
 
     display: flex;
-    align-items: center;
     cursor: pointer;
+    flex-direction: column;
+    justify-content: center;
 }
 
 #sidebar2Menu {
