--- a/css/topPage.css
+++ b/css/topPage.css
@@ -16,6 +16,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1000;
 }
 
 #initLogoContainer img{
@@ -34,7 +35,13 @@
 #topPageDownArrow{
     position: absolute;
     bottom: 0px;
-    left: 50%;
+    left: 43%;
+    width: 14%;
+    height: 100px;
     font-size: 3em;
     color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
